# cardano-sl

./: .gitignore  appveyor.yml  default.nix  everything.cabal  everything.nix  lib.nix  release.nix  shell.nix  stack.yaml
acid-state-exts/src/Serokell/AcidState/: ExtendedState.hs  Util.hs
cabal-merger/: cabal-merger.cabal  mergeFiles.nix
cabal-merger/src/: Main.hs
docs/how-to/: build-cardano-sl-and-daedalus-from-source-code.md
infra/src/Pos/Infra/Reporting/: Http.hs
lib/src/Pos/: Worker.hs
lib/src/Pos/Client/CLI/: NodeOptions.hs
lib/src/Pos/Launcher/: Launcher.hs  Scenario.hs
lib/src/Pos/Worker/: Block.hs  Delegation.hs  Ssc.hs  Update.hs
log-configs/: template-demo.yaml
networking/src/: Node.hs
networking/src/Data/: NonEmptySet.hs
networking/src/Network/Broadcast/: OutboundQueue.hs
networking/src/Network/Broadcast/OutboundQueue/: ConcurrentMultiQueue.hs
networking/src/Network/QDisc/: Fair.hs
networking/src/Node/: Conversation.hs  Internal.hs
networking/src/Node/Message/: Decoder.hs
networking/src/Node/Util/: Monitor.hs
networking/src/Ntp/: Packet.hs  Util.hs
pkgs/: default.nix
scripts/launch/connect-to-cluster/: default.nix
scripts/launch/demo-cluster/: default.nix
scripts/test/wallet/integration/: default.nix
tools/: cardano-sl-tools.cabal
tools/src/addr-convert/: Main.hs
tools/src/cli-docs/: Main.hs
tools/src/genupdate/: Main.hs
tools/src/launcher/: Main.hs
util/: cardano-sl-util.cabal
util/src/Pos/Util/Log/: Internal.hs
wallet-new/: cardano-sl-wallet-new.cabal
wallet-new/demo/: Main.hs  README.md
wallet-new/src/Cardano/Wallet/: Demo.hs  Kernel.hs  Util.hs  WalletLayer.hs
wallet-new/src/Cardano/Wallet/API/V1/: Types.hs
wallet-new/src/Cardano/Wallet/API/V1/LegacyHandlers/: Settings.hs  Transactions.hs  Wallets.hs
wallet-new/src/Cardano/Wallet/API/WIP/: Handlers.hs
wallet-new/src/Cardano/Wallet/Kernel/: BListener.hs  Internal.hs  Transactions.hs
wallet-new/src/Cardano/Wallet/Kernel/DB/: AcidState.hs  HdWallet.hs  Spec.hs
wallet-new/src/Cardano/Wallet/Kernel/DB/Spec/: Update.hs
wallet-new/src/Cardano/Wallet/Server/: CLI.hs  LegacyPlugins.hs  Plugins.hs
wallet-new/src/Cardano/Wallet/WalletLayer/Kernel/: Active.hs  Conv.hs  Settings.hs
wallet-new/test/: MarshallingSpec.hs
wallet-new/test/unit/UTxO/ToCardano/: Interpreter.hs
wallet/src/Pos/Wallet/Web/Methods/: Info.hs
wallet/src/Pos/Wallet/Web/Swagger/: Spec.hs
wallet/src/Pos/Wallet/Web/Swagger/Instances/: Schema.hs
